('GSM' is Greg Sabino Mullane, greg@turnstep.com)


 - Better SQLSTATE code on connection failure (CPAN bug #52863)
   [Chris Travers with help from Andrew Gierth]

 - Fixed POD escapes (CPAN bug #51856) [FWIE@cpan.org]

2.15.1 Released August 7, 2009

  - Release to fix the SIGNATURE file. [GSM]

2.15.0 Released August 4, 2009 (subversion r13164)

  - Use PQexecPrepared even when no placeholders (CPAN bug #48155) [GSM]
  - Allow execute_array and bind_param_array to take oddly numbered items, 
    such that DBI will make missing entries undef/null (CPAN bug #39829) [GSM]
  - Put single quotes around array literals when quoting arrays via
    the quote() method. Per report from David Garamond (CPAN bug #48420) [GSM]

2.14.1 Released July 28, 2009 (subversion r13140)

  - Remove invalid bigint assignment [Tim Bunce]

2.14.0 Released July 27, 2009 (subversion r13130)

  - Make quoting of int, floats, and names much safer. (CPAN bug #41565) [GSM]
  - Make quoting of geometric types respect all valid chars (CPAN bug #41565) [GSM]
  - Fix quoting of booleans to respect more Perlish variants (CPAN bug #41565) [GSM]
  - Return ints and bools-cast-to-number from the db as true Perlish numbers.
    (CPAN bug #47619) [GSM]
  - Fix backslash quoting of arrays (CPAN bug #46732) [GSM]
  - Fix error when destringifying array starting with '[x:y]='. Per report from 
    Jeff Trout [GSM]
  - Fix problem with foreign_key_info() and NAME_uc (CPAN bug #46109) [GSM]
  - Make foreign_key_info() respect FetchHashKeyName (CPAN bug #46103) [GSM]
  - Fix Makefile.PL to apply POSTGRES_INCLUDE in a saner way.
    (CPAN bug #45769) [GAURAV@cpan.org]
  - Improve Win32 README notes [Curtis Jewell]
  - Fix spelling error in type_info (CPAN bug #47786) [justin.d.hunter@gmail.com]
  - Add functions to support MS VC++ 7.0 (CPAN bug #47858) [Taro Nishino]

2.13.1 Released April 23, 2009 (subversion r12713)

  - Fix leak in pg_warn (CPAN bug #45163) [rweikusat@mssgmbh.com]
